--- a/FoodHub/FoodHub.csproj
+++ b/FoodHub/FoodHub.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Models\ORDER.cs" />
     <Compile Include="Models\USER_DETAILS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\RegistrationModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
