--- a/FoodHub/Web.config
+++ b/FoodHub/Web.config
@@ -67,6 +67,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbModel" connectionString="data source=.;initial catalog=FoodHub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbModel" connectionString="data source=DESKTOP-E83A3GJ\SQLEXPRESS;initial catalog=FoodHub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
