--- a/FoodHub/FoodHub.csproj
+++ b/FoodHub/FoodHub.csproj
@@ -128,15 +128,16 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\Admin_CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\testadminController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CART.cs" />
     <Compile Include="Models\CART_ITEM.cs" />
     <Compile Include="Models\CATEGORY.cs" />
+    <Compile Include="Models\CATEGORYLIST.cs" />
     <Compile Include="Models\CITY.cs" />
     <Compile Include="Models\DbModel.cs" />
     <Compile Include="Models\FEEDBACK.cs" />
@@ -145,6 +146,7 @@
     <Compile Include="Models\STATE.cs" />
     <Compile Include="Models\USER_DETAILS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CategoryEntry.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2181,9 +2183,10 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\testadmin\testadmin.cshtml" />
     <Content Include="Views\Shared\_Admin_Layout.cshtml" />
     <Content Include="Views\Home\Menu.cshtml" />
+    <Content Include="Views\Admin_Category\Admin_Category.cshtml" />
+    <Content Include="Views\Shared\_Admin_Category_All.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
