--- a/FoodHub/FoodHub.csproj
+++ b/FoodHub/FoodHub.csproj
@@ -129,6 +129,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\Admin_CategoryController.cs" />
+    <Compile Include="Controllers\Admin_ItemController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
@@ -142,11 +143,13 @@
     <Compile Include="Models\DbModel.cs" />
     <Compile Include="Models\FEEDBACK.cs" />
     <Compile Include="Models\ITEM.cs" />
+    <Compile Include="Models\ITEMLIST.cs" />
     <Compile Include="Models\ORDER.cs" />
     <Compile Include="Models\STATE.cs" />
     <Compile Include="Models\USER_DETAILS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CategoryEntry.cs" />
+    <Compile Include="ViewModels\ItemEntry.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2187,6 +2190,8 @@
     <Content Include="Views\Home\Menu.cshtml" />
     <Content Include="Views\Admin_Category\Admin_Category.cshtml" />
     <Content Include="Views\Shared\_Admin_Category_All.cshtml" />
+    <Content Include="Views\Admin_Item\Index.cshtml" />
+    <Content Include="Views\Shared\_Admin_Item_All.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
