--- a/FoodHub/Web.config
+++ b/FoodHub/Web.config
@@ -61,8 +61,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbModel" connectionString="data source=DESKTOP-CC0NI3P\SQLEXPRESS;initial catalog=FOODHUB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <!--<add name="DbModel" connectionString="data source=DESKTOP-CC0NI3P\SQLEXPRESS;initial catalog=FOODHUB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+	  <add name="DbModel" connectionString="data source=LAPTOP-024QOLVB\SQLEXPRESS;initial catalog=FOODHUB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
   <system.codedom>
     <compilers>
       <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
