--- a/FoodHub/Web.config
+++ b/FoodHub/Web.config
@@ -61,8 +61,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="DbModel" connectionString="data source=DESKTOP-CC0NI3P\SQLEXPRESS;initial catalog=FOODHUB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-	  <add name="DbModel" connectionString="data source=LAPTOP-024QOLVB\SQLEXPRESS;initial catalog=FOODHUB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbModel" connectionString="data source=DESKTOP-CC0NI3P\SQLEXPRESS;initial catalog=FOODHUB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	  <!--<add name="DbModel" connectionString="data source=LAPTOP-024QOLVB\SQLEXPRESS;initial catalog=FOODHUB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 
   </connectionStrings>
   <system.codedom>
