--- a/FoodHub/FoodHub.csproj
+++ b/FoodHub/FoodHub.csproj
@@ -143,6 +143,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CART.cs" />
+    <Compile Include="Models\CARTITEMLIST.cs" />
     <Compile Include="Models\CART_ITEM.cs" />
     <Compile Include="Models\CATEGORY.cs" />
     <Compile Include="Models\CATEGORYLIST.cs" />
@@ -155,6 +156,7 @@
     <Compile Include="Models\STATE.cs" />
     <Compile Include="Models\USER_DETAILS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CartEntry.cs" />
     <Compile Include="ViewModels\CategoryEntry.cs" />
     <Compile Include="ViewModels\ItemEntry.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
